--- a/index.html
+++ b/index.html
@@ -63,51 +63,53 @@
                           <h2 class="h4 text-center" style="color: var(--amarelo); font-weight: bold;">ENTREGADORES</h2>
                           <div class="row">
                             <div class="col-md-6 mb-3">
+                                <a href="https://api.whatsapp.com/send?phone=5562996576495&text=Olá Rafael, quero fazer um orçamento!"
+                                   class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center"
+                                   style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+                                  <i class="fab fa-whatsapp mr-3" style="margin-right: 5px;"></i> Rafael
+                                </a>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <a href="https://api.whatsapp.com/send?phone=5562994464031&text=Olá Luiz, quero fazer um orçamento!"
+                                   class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center"
+                                   style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+                                  <i class="fab fa-whatsapp mr-3" style="margin-right: 5px;"></i> Luiz Otávio
+                                </a>
+                            </div>
+                            <div class="col-md-6 mb-3">
                               <a href="https://api.whatsapp.com/send?phone=5562981228748&text=Olá Renieri, quero fazer um orçamento!"
                                  class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center"
                                  style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                                <i class="fab fa-whatsapp mr-2"></i> Ranyery
-                              </a>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                              <a href="https://api.whatsapp.com/send?phone=5562994464031&text=Olá Luiz, quero fazer um orçamento!"
-                                 class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center"
-                                 style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                                <i class="fab fa-whatsapp mr-2"></i> Luiz Otávio
-                              </a>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                              <a href="https://api.whatsapp.com/send?phone=5562996576495&text=Olá Rafael, quero fazer um orçamento!"
-                                 class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center"
-                                 style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                                <i class="fab fa-whatsapp mr-2"></i> Rafael
+                                <i class="fab fa-whatsapp mr-3" style="margin-right: 5px;"></i> Ranyery
                               </a>
                             </div>
                             <div class="col-md-6 mb-3">
                               <a href="https://api.whatsapp.com/send?phone=5562981085013&text=Olá Diego, quero fazer um orçamento!"
                                  class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center"
                                  style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                                <i class="fab fa-whatsapp mr-2"></i> Diego
+                                <i class="fab fa-whatsapp mr-3" style="margin-right: 5px;"></i> Diego
                               </a>
                             </div>
                           </div>
                         </div>
-                    </section>
-                    <section id="fale-conosco" class="fale-conosco mb-5">
+                      </section>
+                      
+                      <section id="fale-conosco" class="fale-conosco mb-5">
                         <a href="https://www.instagram.com/entregasrapidas3irmaos/" class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center mb-3" style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                          <i class="fab fa-instagram mr-2"></i> Instagram
+                          <i class="fab fa-instagram mr-3" style="margin-right: 5px;"></i> Instagram
                         </a>
                         <a href="https://goo.gl/maps/w9Jsuew1wkE9xu5h9" class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center mb-3" style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                          <i class="fas fa-map-marker-alt mr-2"></i> Localização
+                          <i class="fas fa-map-marker-alt mr-3" style="margin-right: 5px;"></i> Localização
                         </a>
                         <a href="mailto:entregasrapidas2irmaos@gmail.com" class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center mb-3" style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                          <i class="fas fa-envelope mr-2"></i> E-mail
+                          <i class="fas fa-envelope mr-3" style="margin-right: 5px;"></i> E-mail
                         </a>
-                    </section>
+                      </section>
                 </main>
-                <footer class="link-footer">
-                    <br>
-                    <br>
+                <footer class="link-footer text-center mt-5" style="font-size: 15px;"">
+                    <a href="https://www.linkedin.com/in/almeidasa/" target="_blank" class="d-flex align-items-center justify-content-center" style="color: var(--amarelo); text-decoration: none;">
+                        <p style="margin-top: 10px;"><i class="fab fa-linkedin mr-2" style="margin-right: 5px;"></i>AlmeidaSA</p>
+                    </a>
                 </footer>
             </div>
         </div>
