--- a/index.html
+++ b/index.html
@@ -131,5 +131,22 @@
             }
         });
     </script>
+    <script>
+        // Seleciona todos os itens de navegação
+        const navItems = document.querySelectorAll('.nav-item a');
+        const navbarToggler = document.getElementById('navbarToggler');
+        const navbarCollapse = document.getElementById('navbarNav');
+    
+        // Adiciona um evento de clique a cada item de navegação
+        navItems.forEach(item => {
+            item.addEventListener('click', function() {
+                // Verifica se o menu está expandido
+                if (navbarToggler.getAttribute('aria-expanded') === 'true') {
+                    // Fecha o menu
+                    navbarToggler.click();
+                }
+            });
+        });
+    </script>
 </body>
 </html>
