--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                                 </a>
                             </div>
                             <div class="col-md-6 mb-3">
-                              <a href="https://api.whatsapp.com/send?phone=5562981228748&text=Olá Renieri, quero fazer um orçamento!"
+                              <a href="https://api.whatsapp.com/send?phone=5562981228748&text=Olá Ranieri, quero fazer um orçamento!"
                                  class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center"
                                  style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                                <i class="fab fa-whatsapp mr-3" style="margin-right: 5px;"></i> Ranyery
+                                <i class="fab fa-whatsapp mr-3" style="margin-right: 5px;"></i> Ranieri
                               </a>
                             </div>
                             <div class="col-md-6 mb-3">
