--- a/index.html
+++ b/index.html
@@ -23,12 +23,6 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav mx-auto">
                                     <li class="nav-item">
-                                        <a class="nav-link mx-2" href="#entregadores">
-                                            <i class="fa fa-motorcycle"></i>
-                                            Entregadores
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
                                         <a class="nav-link mx-2" href="https://wa.me/c/556294464031">
                                             <i class="fab fa-whatsapp mr-1"></i> Catálogo de serviços
                                         </a>
@@ -36,6 +30,17 @@
                                     <li class="nav-item">
                                         <a class="nav-link mx-2" href="https://api.whatsapp.com/send?phone=5562994464031&text=Olá Luiz, quero fazer um orçamento!">
                                             <i class="fab fa-whatsapp mr-1"></i> Orçamento
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link mx-2" href="#entregadores">
+                                            <i class="fa fa-motorcycle"></i>
+                                            Entregadores
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link mx-2" href="#clientes">
+                                            <i class="fas fa-users mr-1"></i> Clientes
                                         </a>
                                     </li>
                                 </ul>
@@ -92,19 +97,38 @@
                             </div>
                           </div>
                         </div>
-                      </section>
+                    </section>
                       
-                      <section id="fale-conosco" class="fale-conosco mb-5">
+                    <section id="fale-conosco" class="fale-conosco mb-5">
                         <a href="https://www.instagram.com/entregasrapidas3irmaos/" class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center mb-3" style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                          <i class="fab fa-instagram mr-3" style="margin-right: 5px;"></i> Instagram
+                            <i class="fab fa-instagram mr-3" style="margin-right: 5px;"></i> Instagram
                         </a>
                         <a href="https://goo.gl/maps/w9Jsuew1wkE9xu5h9" class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center mb-3" style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                          <i class="fas fa-map-marker-alt mr-3" style="margin-right: 5px;"></i> Localização
+                            <i class="fas fa-map-marker-alt mr-3" style="margin-right: 5px;"></i> Localização
                         </a>
                         <a href="mailto:entregasrapidas2irmaos@gmail.com" class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center mb-3" style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
-                          <i class="fas fa-envelope mr-3" style="margin-right: 5px;"></i> E-mail
+                            <i class="fas fa-envelope mr-3" style="margin-right: 5px;"></i> E-mail
                         </a>
-                      </section>
+                    </section>
+
+                    <section id="clientes" class="clientes mb-5">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-6 mb-4">
+                                    <img src="img/clientes/certa.png" alt="Certa" class="img-fluid cliente-img">
+                                </div>
+                                <div class="col-md-6 mb-4">
+                                    <img src="img/clientes/condessa.png" alt="Condessa" class="img-fluid cliente-img">
+                                </div>
+                                <div class="col-md-6 mb-4">
+                                    <img src="img/clientes/ita.png" alt="Ita Contabilidade" class="img-fluid cliente-img">
+                                </div>
+                                <div class="col-md-6 mb-4">
+                                    <img src="img/clientes/original.png" alt="Original" class="img-fluid cliente-img">
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </main>
                 <footer class="link-footer text-center mt-5" style="font-size: 15px;"">
                     <a href="https://www.linkedin.com/in/almeidasa/" target="_blank" class="d-flex align-items-center justify-content-center" style="color: var(--amarelo); text-decoration: none;">
