--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" media="screen">
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto:700&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background: url('img/background.jpg') no-repeat center center; background-size: cover">
     <div class="container animated fadeIn">
@@ -68,7 +69,7 @@
                           <h2 class="h4 text-center" style="color: var(--amarelo); font-weight: bold;">ENTREGADORES</h2>
                           <div class="row">
                             <div class="col-md-6 mb-3">
-                                <a href="https://api.whatsapp.com/send?phone=5562996576495&text=Olá Rafael, quero fazer um orçamento!"
+                                <a href="https://api.whatsapp.com/send?phone=5562991488626&text=Olá Rafael, quero fazer um orçamento!"
                                    class="btn btn-primary btn-lg w-100 d-flex align-items-center justify-content-center"
                                    style="background: var(--amarelo); color: #000; border-radius: 30px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
                                   <i class="fab fa-whatsapp mr-3" style="margin-right: 5px;"></i> Rafael
@@ -112,24 +113,39 @@
                     </section>
 
                     <section id="clientes" class="clientes mb-5">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-6 mb-4">
-                                    <img src="img/clientes/certa.png" alt="Certa" class="img-fluid cliente-img">
+                        <div class="my-3">
+                            <h2 class="h4 text-center" style="margin-bottom: 20px; color: var(--amarelo); font-weight: bold;">CLIENTES</h2>
+                            <div id="clientesCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="img/clientes/condessa.png" class="d-block mx-auto" alt="Cliente 1">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/clientes/samm.jpeg" class="d-block mx-auto" alt="Cliente 2">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/clientes/bellacintura.jpg" class="d-block mx-auto" alt="Cliente 3">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/clientes/original.png" class="d-block mx-auto" alt="Cliente 4">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/clientes/certa.png" class="d-block mx-auto" alt="Cliente 5">
+                                    </div>
                                 </div>
-                                <div class="col-md-6 mb-4">
-                                    <img src="img/clientes/condessa.png" alt="Condessa" class="img-fluid cliente-img">
-                                </div>
-                                <div class="col-md-6 mb-4">
-                                    <img src="img/clientes/ita.png" alt="Ita Contabilidade" class="img-fluid cliente-img">
-                                </div>
-                                <div class="col-md-6 mb-4">
-                                    <img src="img/clientes/original.png" alt="Original" class="img-fluid cliente-img">
-                                </div>
+                                <a class="carousel-control-prev" href="#clientesCarousel" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#clientesCarousel" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
                             </div>
                         </div>
                     </section>
                 </main>
+
                 <footer class="link-footer text-center mt-5" style="font-size: 15px;"">
                     <a href="https://www.linkedin.com/in/almeidasa/" target="_blank" class="d-flex align-items-center justify-content-center" style="color: var(--amarelo); text-decoration: none;">
                         <p style="margin-top: 10px;"><i class="fab fa-linkedin mr-2" style="margin-right: 5px;"></i>AlmeidaSA</p>
@@ -141,9 +157,11 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <script>
         document.getElementById('navbarToggler').addEventListener('click', function() {
             const logo = document.getElementById('logo3irmaos');
