--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
                             <div id="clientesCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="img/clientes/condessa.png" class="d-block mx-auto" alt="Cliente 1">
+                                        <img src="img/clientes/ita.png" class="d-block mx-auto" alt="Cliente 1">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/clientes/condessa.png" class="d-block mx-auto" alt="Cliente 2">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="img/clientes/samm.jpeg" class="d-block mx-auto" alt="Cliente 2">
@@ -131,6 +134,9 @@
                                     </div>
                                     <div class="carousel-item">
                                         <img src="img/clientes/certa.png" class="d-block mx-auto" alt="Cliente 5">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/clientes/valentti.png" class="d-block mx-auto" alt="Cliente 5">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#clientesCarousel" role="button" data-slide="prev">
