feat: Incluindo clientes

--- a/index.html
+++ b/index.html
@@ -118,25 +118,28 @@
                             <div id="clientesCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="img/clientes/ita.png" class="d-block mx-auto" alt="Cliente 1">
+                                        <img src="img/clientes/ita.png" class="d-block mx-auto" alt="Ita Contabilidade">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/clientes/condessa.png" class="d-block mx-auto" alt="Cliente 2">
+                                        <img src="img/clientes/condessa.png" class="d-block mx-auto" alt="Condessa cosméticos e perfumaria">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/clientes/samm.jpeg" class="d-block mx-auto" alt="Cliente 2">
+                                        <img src="img/clientes/samm.jpeg" class="d-block mx-auto" alt="SAMM Beachwear">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/clientes/bellacintura.jpg" class="d-block mx-auto" alt="Cliente 3">
+                                        <img src="img/clientes/bellacintura.jpg" class="d-block mx-auto" alt="Bella Cintura">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/clientes/original.png" class="d-block mx-auto" alt="Cliente 4">
+                                        <img src="img/clientes/original.png" class="d-block mx-auto" alt="Originaltech Informática">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/clientes/certa.png" class="d-block mx-auto" alt="Cliente 5">
+                                        <img src="img/clientes/certa.png" class="d-block mx-auto" alt="Certa - Centro de formação de condutores">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/clientes/valentti.png" class="d-block mx-auto" alt="Cliente 5">
+                                        <img src="img/clientes/valentti.png" class="d-block mx-auto" alt="Valentti Pratas">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/clientes/brandkids.png" class="d-block mx-auto" alt="Brandkids moda infantil e juvenil">
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#clientesCarousel" role="button" data-slide="prev">
